--- a/domain_comparison/smu_dms.ipynb
+++ b/domain_comparison/smu_dms.ipynb
@@ -80,9 +80,7 @@
     "\n",
     "cleaned_p53 = ses.clean_variation_matrix(translated_p53)\n",
     "\n",
-    "df = gia_null_eto[gia_null_eto.apply(lambda row: (cleaned_p53.loc[row['position_mut']-1, 'Original'] == row['AS_old']) and (row['AS_new'] in cleaned_p53.loc[row['position_mut']-1, ['Variation 1', 'Variation 2', 'Variation 3', 'Variation 4', 'Variation 5', 'Variation 6', 'Variation 7', 'Variation 8', 'Variation 9']].values), axis=1)]\n",
-    "\n",
-    "df"
+    "df = gia_null_eto[gia_null_eto.apply(lambda row: (cleaned_p53.loc[row['position_mut']-1, 'Original'] == row['AS_old']) and (row['AS_new'] in cleaned_p53.loc[row['position_mut']-1, ['Variation 1', 'Variation 2', 'Variation 3', 'Variation 4', 'Variation 5', 'Variation 6', 'Variation 7', 'Variation 8', 'Variation 9']].values), axis=1)]"
    ]
   },
   {
@@ -226,7 +224,6 @@
     }
    ],
    "source": [
-    "\n",
     "dms_scores_t1 = t1_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_t1, bins=50)\n",
@@ -283,7 +280,6 @@
     }
    ],
    "source": [
-    "\n",
     "dms_scores_t2 = t2_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_t2, bins=50)\n",
@@ -400,7 +396,6 @@
     }
    ],
    "source": [
-    "\n",
     "dms_scores_dna = dna_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_dna, bins=50)\n",
@@ -466,7 +461,6 @@
     }
    ],
    "source": [
-    "\n",
     "dms_scores_tetra = tetra_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_tetra, bins=50)\n",
@@ -529,7 +523,6 @@
     }
    ],
    "source": [
-    "\n",
     "dms_scores_reg = reg_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_reg, bins=50)\n",
@@ -564,33 +557,31 @@
     }
    ],
    "source": [
-    "# Combine all datasets\n",
     "all_dms_scores = np.concatenate((dms_scores_t1, dms_scores_t2, dms_scores_pr,\n",
     "                                 dms_scores_dna, dms_scores_tetra, dms_scores_reg))\n",
     "\n",
-    "# Create a figure and axis\n",
-    "fig, ax = plt.subplots(figsize=(10, 6))  # Adjust the figure size as needed\n",
+    "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "\n",
-    "# Iterate over each dataset and fit a curve\n",
+    "\n",
     "datasets = ['Transactivation domain 1', 'Transactivation domain 2', 'Proline rich region',\n",
     "            'DNA binding domain', 'Tetramerization domain', 'Regulatory domain']\n",
     "for data, label in zip([dms_scores_t1, dms_scores_t2, dms_scores_pr,\n",
     "                        dms_scores_dna, dms_scores_tetra, dms_scores_reg], datasets):\n",
-    "    # Fit a curve to the data using KDE\n",
+    "\n",
     "    kde = gaussian_kde(data)\n",
     "    x_vals = np.linspace(np.min(all_dms_scores), np.max(all_dms_scores), 1000)\n",
     "    y_vals = kde(x_vals)\n",
     "\n",
-    "    # Plot the fitted curve with label\n",
+    "\n",
     "    ax.plot(x_vals, y_vals, linewidth=2, label=label)\n",
     "\n",
-    "# Add labels, title, and legend\n",
+    "\n",
     "ax.set_xlabel('Value')\n",
     "ax.set_ylabel('Density')\n",
     "ax.set_title('Fitted Curves')\n",
     "ax.legend()\n",
     "\n",
-    "# Show the plot\n",
+    "\n",
     "plt.show()"
    ],
    "metadata": {
@@ -629,7 +620,6 @@
     }
    ],
    "source": [
-    "\n",
     "t1_std = t1_mean.std()\n",
     "t2_std = t2_mean.std()\n",
     "pr_std = pr_mean.std()\n",
@@ -655,6 +645,15 @@
    "source": [
     "## Mean value matrix"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Creating a matrix showing the mean substitution DMS score for each aminoacid. For further information see the data_exploration folder."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -684,7 +683,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
     "sns.heatmap(dc.rmv_na(de.mean_substitutions(t1_list)))"
    ]
   },
@@ -716,7 +714,6 @@
     }
    ],
    "source": [
-    "\n",
     "sns.heatmap(dc.rmv_na(de.mean_substitutions(t2_list)))"
    ]
   },
@@ -748,7 +745,6 @@
     }
    ],
    "source": [
-    "\n",
     "sns.heatmap(dc.rmv_na(de.mean_substitutions(pr_list)))"
    ]
   },
@@ -780,7 +776,6 @@
     }
    ],
    "source": [
-    "\n",
     "sns.heatmap(dc.rmv_na(de.mean_substitutions(dna_list)))"
    ]
   },
@@ -812,7 +807,6 @@
     }
    ],
    "source": [
-    "\n",
     "sns.heatmap(dc.rmv_na(de.mean_substitutions(tetra_list)))"
    ]
   },
@@ -844,7 +838,6 @@
     }
    ],
    "source": [
-    "\n",
     "sns.heatmap(dc.rmv_na(de.mean_substitutions(reg_list)))"
    ]
   },
@@ -889,7 +882,6 @@
     }
    ],
    "source": [
-    "\n",
     "print('T1 Domain')\n",
     "print(doc.test_normality(t1_list['DMS_score']))\n",
     "\n",
