--- a/domain_comparison/smu_to_rdm.ipynb
+++ b/domain_comparison/smu_to_rdm.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.172071Z",
-     "end_time": "2023-07-06T23:19:45.275800Z"
+     "start_time": "2023-07-07T00:21:30.920189Z",
+     "end_time": "2023-07-07T00:21:31.022889Z"
     }
    },
    "outputs": [],
@@ -18,15 +18,7 @@
     "from scipy.stats import gaussian_kde\n",
     "import scipy.stats as stats\n",
     "alpha = 0.05\n",
-    "import pandas as pd\n",
-    "import data_cleanup as dc\n",
-    "import domain_comparison as doc\n",
-    "import data_exploration as de\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import severity_score as ses\n",
-    "import numpy as np\n",
-    "from scipy.stats import gaussian_kde"
+    "import pandas as pd"
    ]
   },
   {
@@ -67,7 +59,7 @@
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t1_mean_rdm['mean'], t1_mean_smu['mean'])\n",
     "\n",
-    "# Print the results\n",
+    "#printing the results\n",
     "print(\"Mann-Whitney U statistic:\", U_statistic)\n",
     "print(\"p-value:\", p_value)\n",
     "if p_value < alpha :\n",
@@ -78,8 +70,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.177832Z",
-     "end_time": "2023-07-06T23:19:45.276976Z"
+     "start_time": "2023-07-07T00:21:30.922365Z",
+     "end_time": "2023-07-07T00:21:31.024870Z"
     }
    }
   },
@@ -137,8 +129,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.193787Z",
-     "end_time": "2023-07-06T23:19:45.277384Z"
+     "start_time": "2023-07-07T00:21:30.951284Z",
+     "end_time": "2023-07-07T00:21:31.025338Z"
     }
    }
   },
@@ -182,8 +174,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.200200Z",
-     "end_time": "2023-07-06T23:19:45.278105Z"
+     "start_time": "2023-07-07T00:21:30.956002Z",
+     "end_time": "2023-07-07T00:21:31.025797Z"
     }
    }
   },
@@ -227,8 +219,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.206346Z",
-     "end_time": "2023-07-06T23:19:45.278499Z"
+     "start_time": "2023-07-07T00:21:30.960923Z",
+     "end_time": "2023-07-07T00:21:31.026285Z"
     }
    }
   },
@@ -272,8 +264,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.212465Z",
-     "end_time": "2023-07-06T23:19:45.278864Z"
+     "start_time": "2023-07-07T00:21:30.965766Z",
+     "end_time": "2023-07-07T00:21:31.026761Z"
     }
    }
   },
@@ -317,8 +309,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.217918Z",
-     "end_time": "2023-07-06T23:19:45.279236Z"
+     "start_time": "2023-07-07T00:21:30.970098Z",
+     "end_time": "2023-07-07T00:21:31.026830Z"
     }
    }
   },
@@ -348,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GNN\n",
+      "giacomelli null nutlin\n",
       "Mann-Whitney U statistic: 1813.0\n",
       "p-value: 1.7246722571142915e-14\n",
       "The two lists of means differ significantly!\n",
@@ -360,7 +352,7 @@
     }
    ],
    "source": [
-    "print('GNN')\n",
+    "print('giacomelli null nutlin')\n",
     "t1_gnn_rdm = pd.read_csv('./data/t1_gnn_rdm.csv')\n",
     "t1_gnn_smu = pd.read_csv('./data/t1_gnn_smu.csv')\n",
     "\n",
@@ -391,8 +383,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.235797Z",
-     "end_time": "2023-07-06T23:19:45.279650Z"
+     "start_time": "2023-07-07T00:21:30.975826Z",
+     "end_time": "2023-07-07T00:21:31.030078Z"
     }
    }
   },
@@ -413,11 +405,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GNN\n",
+      "giacomelli null nutlin\n",
       "Mann-Whitney U statistic: 396.0\n",
       "p-value: 1.2346350154956704e-07\n",
       "The two lists of means differ significantly!\n",
-      "GWN\n",
+      "giacomelli wildtype nutlin\n",
       "Mann-Whitney U statistic: 342.0\n",
       "p-value: 2.0738992298297693e-05\n",
       "The two lists of means differ significantly!\n"
@@ -425,7 +417,7 @@
     }
    ],
    "source": [
-    "print('GNN')\n",
+    "print('giacomelli null nutlin')\n",
     "t2_gnn_rdm = pd.read_csv('./data/t2_gnn_rdm.csv')\n",
     "t2_gnn_smu = pd.read_csv('./data/t2_gnn_smu.csv')\n",
     "\n",
@@ -439,7 +431,7 @@
     "else:\n",
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
-    "print('GWN')\n",
+    "print('giacomelli wildtype nutlin')\n",
     "t2_gwn_rdm = pd.read_csv('./data/t2_gwn_rdm.csv')\n",
     "t2_gwn_smu = pd.read_csv('./data/t2_gwn_smu.csv')\n",
     "\n",
@@ -456,8 +448,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.239876Z",
-     "end_time": "2023-07-06T23:19:45.280578Z"
+     "start_time": "2023-07-07T00:21:30.983117Z",
+     "end_time": "2023-07-07T00:21:31.031329Z"
     }
    }
   },
@@ -478,11 +470,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GNN\n",
+      "giacomelli null nutlin\n",
       "Mann-Whitney U statistic: 783.0\n",
       "p-value: 1.4424242043992082e-10\n",
       "The two lists of means differ significantly!\n",
-      "GWN\n",
+      "giacomelli wildtype nutlin\n",
       "Mann-Whitney U statistic: 724.0\n",
       "p-value: 5.2125540479975956e-08\n",
       "The two lists of means differ significantly!\n"
@@ -490,7 +482,7 @@
     }
    ],
    "source": [
-    "print('GNN')\n",
+    "print('giacomelli null nutlin')\n",
     "pr_gnn_rdm = pd.read_csv('./data/pr_gnn_rdm.csv')\n",
     "pr_gnn_smu = pd.read_csv('./data/pr_gnn_smu.csv')\n",
     "\n",
@@ -504,7 +496,7 @@
     "else:\n",
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
-    "print('GWN')\n",
+    "print('giacomelli wildtype nutlin')\n",
     "pr_gwn_rdm = pd.read_csv('./data/pr_gwn_rdm.csv')\n",
     "pr_gwn_smu = pd.read_csv('./data/pr_gwn_smu.csv')\n",
     "\n",
@@ -521,8 +513,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.247000Z",
-     "end_time": "2023-07-06T23:19:45.280986Z"
+     "start_time": "2023-07-07T00:21:30.990580Z",
+     "end_time": "2023-07-07T00:21:31.031656Z"
     }
    }
   },
@@ -543,11 +535,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GNN\n",
+      "giacomelli null nutlin\n",
       "Mann-Whitney U statistic: 19678.0\n",
       "p-value: 0.15391913242230018\n",
       "The two lists of means do not differ significantly!\n",
-      "GWN\n",
+      "giacomelli wildtype nutlin\n",
       "Mann-Whitney U statistic: 18643.0\n",
       "p-value: 0.5796439002699463\n",
       "The two lists of means do not differ significantly!\n"
@@ -555,7 +547,7 @@
     }
    ],
    "source": [
-    "print('GNN')\n",
+    "print('giacomelli null nutlin')\n",
     "dna_gnn_rdm = pd.read_csv('./data/dna_gnn_rdm.csv')\n",
     "dna_gnn_smu = pd.read_csv('./data/dna_gnn_smu.csv')\n",
     "\n",
@@ -569,7 +561,7 @@
     "else:\n",
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
-    "print('GWN')\n",
+    "print('giacomelli wildtype nutlin')\n",
     "dna_gwn_rdm = pd.read_csv('./data/dna_gwn_rdm.csv')\n",
     "dna_gwn_smu = pd.read_csv('./data/dna_gwn_smu.csv')\n",
     "\n",
@@ -586,8 +578,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.254647Z",
-     "end_time": "2023-07-06T23:19:45.281214Z"
+     "start_time": "2023-07-07T00:21:30.999116Z",
+     "end_time": "2023-07-07T00:21:31.032352Z"
     }
    }
   },
@@ -608,11 +600,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GNN\n",
+      "giacomelli null nutlin\n",
       "Mann-Whitney U statistic: 1296.0\n",
       "p-value: 3.0463409828899006e-13\n",
       "The two lists of means differ significantly!\n",
-      "GWN\n",
+      "giacomelli wildtype nutlin\n",
       "Mann-Whitney U statistic: 1044.0\n",
       "p-value: 8.419262842079743e-06\n",
       "The two lists of means differ significantly!\n"
@@ -620,7 +612,7 @@
     }
    ],
    "source": [
-    "print('GNN')\n",
+    "print('giacomelli null nutlin')\n",
     "tetra_gnn_rdm = pd.read_csv('./data/tetra_gnn_rdm.csv')\n",
     "tetra_gnn_smu = pd.read_csv('./data/tetra_gnn_smu.csv')\n",
     "\n",
@@ -634,7 +626,7 @@
     "else:\n",
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
-    "print('GWN')\n",
+    "print('giacomelli wildtype nutlin')\n",
     "tetra_gwn_rdm = pd.read_csv('./data/tetra_gwn_rdm.csv')\n",
     "tetra_gwn_smu = pd.read_csv('./data/tetra_gwn_smu.csv')\n",
     "\n",
@@ -651,8 +643,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.261479Z",
-     "end_time": "2023-07-06T23:19:45.281588Z"
+     "start_time": "2023-07-07T00:21:31.006040Z",
+     "end_time": "2023-07-07T00:21:31.032419Z"
     }
    }
   },
@@ -673,11 +665,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GNN\n",
+      "giacomelli null nutlin\n",
       "Mann-Whitney U statistic: 1119.0\n",
       "p-value: 3.803156211785148e-05\n",
       "The two lists of means differ significantly!\n",
-      "GWN\n",
+      "giacomelli wildtype nutlin\n",
       "Mann-Whitney U statistic: 1309.0\n",
       "p-value: 1.108286158424074e-09\n",
       "The two lists of means differ significantly!\n"
@@ -685,7 +677,7 @@
     }
    ],
    "source": [
-    "print('GNN')\n",
+    "print('giacomelli null nutlin')\n",
     "reg_gnn_rdm = pd.read_csv('./data/reg_gnn_rdm.csv')\n",
     "reg_gnn_smu = pd.read_csv('./data/reg_gnn_smu.csv')\n",
     "\n",
@@ -699,7 +691,7 @@
     "else:\n",
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
-    "print('GWN')\n",
+    "print('giacomelli wildtype nutlin')\n",
     "reg_gwn_rdm = pd.read_csv('./data/reg_gwn_rdm.csv')\n",
     "reg_gwn_smu = pd.read_csv('./data/reg_gwn_smu.csv')\n",
     "\n",
@@ -716,8 +708,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.268923Z",
-     "end_time": "2023-07-06T23:19:45.281652Z"
+     "start_time": "2023-07-07T00:21:31.014159Z",
+     "end_time": "2023-07-07T00:21:31.032512Z"
     }
    }
   },
@@ -729,8 +721,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:45.275169Z",
-     "end_time": "2023-07-06T23:19:45.281687Z"
+     "start_time": "2023-07-07T00:21:31.019615Z",
+     "end_time": "2023-07-07T00:21:31.032549Z"
     }
    }
   }
