--- a/Visualization/FinalTests_copy.ipynb
+++ b/Visualization/FinalTests_copy.ipynb
@@ -20,7 +20,7 @@
     "import data_cleanup as dc\n",
     "import data_exploration as de\n",
     "import matplotlib.pyplot as plt\n",
-    "#import Documentation as bac\n",
+    "import Documentation as doc\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
@@ -29,8 +29,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:28:58.435797Z",
-     "start_time": "2023-07-03T13:28:58.264182Z"
+     "end_time": "2023-07-06T22:43:57.549694Z",
+     "start_time": "2023-07-06T22:43:55.255224Z"
     }
    }
   },
@@ -791,6 +791,156 @@
      "end_time": "2023-07-06T14:56:18.963076Z",
      "start_time": "2023-07-06T14:56:18.939257Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "lowest_vals = pd.DataFrame(columns=['Name of the Dataset', 'Location of lowest DMS_score sum', \"Sum\", \"Original AA\"])\n",
+    "\n",
+    "lowest_vals['Name of the Dataset'] = [\"Giacomelli Null Etoposide\", \"Giacomelli NULL Nutlin\", \"Giacomelli WT Nutlin\", \"Kotler\"]\n",
+    "lowest_vals['Location of lowest DMS_score sum'] = [280, 205, 245, 245]\n",
+    "lowest_vals['Sum'] = [-33.450339, -27.798457, -41.124490, -4.352254]\n",
+    "lowest_vals['Original AA'] = ['R', 'Y', 'G', \"G\"]\n",
+    "\n",
+    "lowest_vals_gesammelt = pd.DataFrame(columns=['Giacomelli NULL Etoposide location','Giacomelli NULL Etoposide sums', 'Giacomelli NULL Nutlin location', 'Giacomelli NULL Nutlin sums', \"Giacomelli WT Nutlin location\", \"Giacomelli WT Nutlin sums\",  \"Kotler location\", \"Kotler sums\"])\n",
+    "\n",
+    "anzahl: int = 10\n",
+    "lowest_vals_gesammelt = pd.DataFrame()\n",
+    "#####\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "\n",
+    "GNELV= dc.low_val(doc.gia_null_eto_norm, 5)\n",
+    "GNNLV= dc.low_val(doc.gia_null_nut_norm, 5)\n",
+    "GWNLV= dc.low_val(doc.gia_wt_nut_norm, 5)\n",
+    "KHLV= dc.low_val(doc.kot_hum_norm, 5)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-06T22:44:07.333324Z",
+     "start_time": "2023-07-06T22:44:07.180711Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                          Sum\nposition_mut AS_old          \n280          R      -6.190289\n281          D      -6.189019\n278          P      -5.751278\n205          Y      -5.682232\n275          C      -5.511703",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>Sum</th>\n    </tr>\n    <tr>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>280</th>\n      <th>R</th>\n      <td>-6.190289</td>\n    </tr>\n    <tr>\n      <th>281</th>\n      <th>D</th>\n      <td>-6.189019</td>\n    </tr>\n    <tr>\n      <th>278</th>\n      <th>P</th>\n      <td>-5.751278</td>\n    </tr>\n    <tr>\n      <th>205</th>\n      <th>Y</th>\n      <td>-5.682232</td>\n    </tr>\n    <tr>\n      <th>275</th>\n      <th>C</th>\n      <td>-5.511703</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GNELV"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-06T22:44:29.905537Z",
+     "start_time": "2023-07-06T22:44:29.895696Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                           Sum\nposition_mut AS_old           \n205          Y      -13.762829\n278          P      -13.679713\n132          K      -13.674308\n238          C      -13.403968\n143          V      -13.094452",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>Sum</th>\n    </tr>\n    <tr>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>205</th>\n      <th>Y</th>\n      <td>-13.762829</td>\n    </tr>\n    <tr>\n      <th>278</th>\n      <th>P</th>\n      <td>-13.679713</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <th>K</th>\n      <td>-13.674308</td>\n    </tr>\n    <tr>\n      <th>238</th>\n      <th>C</th>\n      <td>-13.403968</td>\n    </tr>\n    <tr>\n      <th>143</th>\n      <th>V</th>\n      <td>-13.094452</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GNNLV"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-06T22:44:30.852669Z",
+     "start_time": "2023-07-06T22:44:30.850558Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                           Sum\nposition_mut AS_old           \n245          G      -15.419176\n249          R      -14.978965\n179          H      -14.478058\n278          P      -14.463685\n176          C      -14.455811",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>Sum</th>\n    </tr>\n    <tr>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>245</th>\n      <th>G</th>\n      <td>-15.419176</td>\n    </tr>\n    <tr>\n      <th>249</th>\n      <th>R</th>\n      <td>-14.978965</td>\n    </tr>\n    <tr>\n      <th>179</th>\n      <th>H</th>\n      <td>-14.478058</td>\n    </tr>\n    <tr>\n      <th>278</th>\n      <th>P</th>\n      <td>-14.463685</td>\n    </tr>\n    <tr>\n      <th>176</th>\n      <th>C</th>\n      <td>-14.455811</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GWNLV"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-06T22:44:32.226746Z",
+     "start_time": "2023-07-06T22:44:32.208826Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                          Sum\nposition_mut AS_old          \n245          G      -6.568038\n273          R      -4.799821\n249          R      -4.299519\n281          D      -4.030244\n132          K      -3.858204",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>Sum</th>\n    </tr>\n    <tr>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>245</th>\n      <th>G</th>\n      <td>-6.568038</td>\n    </tr>\n    <tr>\n      <th>273</th>\n      <th>R</th>\n      <td>-4.799821</td>\n    </tr>\n    <tr>\n      <th>249</th>\n      <th>R</th>\n      <td>-4.299519</td>\n    </tr>\n    <tr>\n      <th>281</th>\n      <th>D</th>\n      <td>-4.030244</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <th>K</th>\n      <td>-3.858204</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KHLV"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-06T22:44:33.898413Z",
+     "start_time": "2023-07-06T22:44:33.873532Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
